build/0.1.0/readme.md

##iPhoto

一个用纯 NodeJs 编写的照片归类小工具。 
使用该工具，可以对从手机中导出的照片、视频等文档进行归类。 
至于从其它设备如数码相机导出的照片和视频等，理论上也可以处理。

###产生背景

在使用手机时会产生很多图片和视频等珍贵的资料文档，如：
- 拍摄的照片
- 录制的视频
- 手机截屏
- 在使用各种 APP 时保存的图片和视频等

用 Windows 导出到电脑时，虽然可以按日期进行归类到对应的目录，但缺少进一步的归类，不方便收集和处理。
如，用手机拍摄的照片，照片中就包含有完整的 EXIF 信息，EXIF 信息是一种描述照片信息的元数据，包括拍摄日期、拍摄地点、分辨率等。
而手机截屏、各种 APP 保存得到的图片则没有 EXIF 信息。
手机截屏的后缀名为 `.PNG`，从 APP 中保存得到的图片则为 `.JPG`。
录制的视频格式为 `.MOV`，而在微信上保存的视频一般为 `.mp4` 等等。
基于以上情况，特写了个小工具，用于把从手机中导出的照片、视频等文档进行归类。

###使用方式

在项目根目录，运行 `node index` 即可。 
该工具使用拷贝的方式进行处理，不会对原文件造成影响，请放心使用。
当目标文件存在时，可以通过配置指定是覆盖还是跳过。 默认是跳过。

###配置

配置在 `config.json` 中，使用之前请先根据实际情况配置好要扫描的输入目录 `src` 字段。


####总配置

名称 | 类型 | 描述
------ | ------ | ------
`src` | string | 要扫描的输入目录。
`dest` | Object | 输出目录，复合值，具体字段见下表。
`exif` | Object | EXIF 信息的配置对象，复合值，具体字段见下表。

####dest 配置对象
名称 | 类型 | 描述
------ | ------ | ------
`overwrite` | boolean | 当要拷贝到的目标文件已存时，是否进行覆盖。 默认是跳过。
`error` | string | 发生异常时输出 JSON 数据的保存路径。 如果为空或不指定，则不输出。
`photo` | string | 针对有完整 EXIF 信息的照片的保存路径。
`.jpg` | string | 针对后缀名为 `.jpg` (后缀名不区分大小写) 的图片的保存路径。
`.png` | string | 针对后缀名为 `.png` (后缀名不区分大小写) 的图片的保存路径。
`.mov` | string | 针对后缀名为 `.mov` (后缀名不区分大小写) 的视频的保存路径。
`.mp4` | string | 针对后缀名为 `.mp4` (后缀名不区分大小写) 的视频的保存路径。
`.*` | string | 针对后缀名以上其它情况(后缀名不区分大小写) 的文件的保存路径。

####exif 配置对象
名称 | 类型 | 描述
------ | ------ | ------
`exts` | Array | 需要提取 EXIF 信息的文件名后缀。



**注意：** 如果需要扩展针对其它类型的处理，请自行增加一条记录，如 `.txt`。


####配置中的模板填充
在配置的值中，路径类型的可以使用模板填充来获得某些信息。

名称 | 类型 | 描述
------ | ------ | ------
`make` | string | 设备制造商名称，如 `Apple`
`model` | string | 设备型号，如 `iPhone 4S`
`year` | string | 照片拍摄年份，如 `2016`
`month` | string | 照片拍摄月份，如 `08`
`day` | string | 照片拍摄日份，如 `01`
`name` | string | 原始的基本文件名，如 `IMG_9070.JPG`
`date` | string | 针对没有 EXIF 信息的文件，默认取最后一级目录名为拍摄日期，如 `2016-08-29`

要使用以上字段，请使用花括号 `{}` 括起来，如 `{make}`


####默认配置
```json
{

    "src": "./test/",

    "dest": {
        "overwrite": false,

        "error": "./data/error.json",

        "photo": "./data/photo/{make}/{model}/{year}/{year}-{month}-{day}/{name}",

        ".jpg": "./data/jpg/{date}/{name}",
        ".png": "./data/png/{date}/{name}",
        ".mov": "./data/mov/{date}/{name}",
        ".mp4": "./data/mp4/{date}/{name}",

        ".*": "./data/other/{date}/{name}"
        
    },

    "exif": {
        "exts": [".JPG"]
    }

}



```


